--- a/assets/app.css
+++ b/assets/app.css
@@ -19,7 +19,7 @@ md-toolbar h3 {
 md-list-item > button {
   width:100%;
   text-align:left !important;
-  height:70px;;
+  height:67px;
 }
 
 md-icon.avatar {
