--- a/app/views/list.html
+++ b/app/views/list.html
@@ -6,11 +6,11 @@
                 <input ng-model="query" type="text" placeholder="fluffy bunnies">
                 <button class="button small expand">Search YouTube</button>
             </form>-->
-            <div ng-include src="'/app/views/' + section + '.html'"></div>
+            <div ng-include src="'app/views/' + section + '.html'"></div>
         </div>
     </div>
     <div when-scrolled="loadVideos()">
-        <div ng-include src="'/app/views/videos.html'"></div>
+        <div ng-include src="'app/views/videos.html'"></div>
     </div>
 </div>
 
